--- a/crates/rsh-ansi-term/Cargo.toml
+++ b/crates/rsh-ansi-term/Cargo.toml
@@ -1,19 +1,14 @@
 [package]
-authors = [
-    "ogham@bsago.me",
-    "Ryan Scheel (Havvy) <ryan.havvy@gmail.com>",
-    "Josh Triplett <josh@joshtriplett.org>",
-    "The Nu Project Contributors",
-]
+authors = ["Morales Research Corporation"]
 description = "Library for ANSI terminal colors and styles (bold, underline)"
-edition = "2018"
-license = "MIT"
-name = "nu-ansi-term"
+edition = "2021"
+license = "BSD-3"
+name = "rsh-ansi-term"
 version = "3.0.0"
 
 [lib]
 doctest = false
-# name = "nu-ansi-term"
+# name = "rsh-ansi-term"
 
 [features]
 derive_serde_style = ["serde"]
