--- a/crates/rsh-engine/Cargo.toml
+++ b/crates/rsh-engine/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
-authors = ["The Nu Project Contributors"]
+authors = ["Morales Research Corporation"]
 description = "Core commands for nushell"
-edition = "2018"
-license = "MIT"
-name = "nu-engine"
+edition = "2021"
+license = "BSD-3"
+name = "rsh-engine"
 version = "3.0.0"
 
 [dependencies]
-nu-data = { version="3.0.0", path="../nu-data" }
-nu-errors = { version="3.0.0", path="../nu-errors" }
-nu-parser = { version="3.0.0", path="../nu-parser" }
-nu-plugin = { version="3.0.0", path="../nu-plugin" }
-nu-protocol = { version="3.0.0", path="../nu-protocol" }
-nu-source = { version="3.0.0", path="../nu-source" }
-nu-stream = { version="3.0.0", path="../nu-stream" }
-nu-value-ext = { version="3.0.0", path="../nu-value-ext" }
-nu-ansi-term = { version="3.0.0", path="../nu-ansi-term" }
-nu-test-support = { version="3.0.0", path="../nu-test-support" }
-nu-path = { version="3.0.0", path="../nu-path" }
+rsh-data = { version="3.0.0", path="../rsh-data" }
+rsh-errors = { version="3.0.0", path="../rsh-errors" }
+rsh-parser = { version="3.0.0", path="../rsh-parser" }
+rsh-plugin = { version="3.0.0", path="../rsh-plugin" }
+rsh-protocol = { version="3.0.0", path="../rsh-protocol" }
+rsh-source = { version="3.0.0", path="../rsh-source" }
+rsh-stream = { version="3.0.0", path="../rsh-stream" }
+rsh-value-ext = { version="3.0.0", path="../rsh-value-ext" }
+rsh-ansi-term = { version="3.0.0", path="../rsh-ansi-term" }
+rsh-test-support = { version="3.0.0", path="../rsh-test-support" }
+rsh-path = { version="3.0.0", path="../rsh-path" }
 
 trash = { version="1.3.0", optional=true }
 which = { version="4.0.2", optional=true }
