--- a/crates/rsh-engine/Cargo.toml
+++ b/crates/rsh-engine/Cargo.toml
@@ -60,10 +60,10 @@ umask = "1.0.0"
 users = "0.11.0"
 
 [dev-dependencies]
-nu-test-support = { version="3.0.0", path="../nu-test-support" }
+rsh-test-support = { version="3.0.0", path="../rsh-test-support" }
 hamcrest2 = "0.3.0"
 
 [features]
 rustyline-support = []
 trash-support = ["trash"]
-dataframe = ["nu-protocol/dataframe"]
+dataframe = ["rsh-protocol/dataframe"]
